# async-segcache

./: CLAUDE.md  Cargo.toml
.claude/: settings.local.json
examples/: benchmark_get_scaling.rs  benchmark_set_scaling.rs  eviction_policy.rs
src/: hashtable.rs  hugepage.rs  item.rs  lib.rs  metrics.rs  segments.rs  sync.rs  tests.rs  ttlbuckets.rs  util.rs
tests/: fill_cache_test.rs  proactive_expiration_test.rs  ttl_expiration_test.rs
