[package]
name = "async-segcache"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
clocksource = "0.8.1"
crossbeam-deque = "0.8.6"
loom = { version = "0.7", features = ["checkpoint"], optional = true }
rand = "0.8"
tokio = { version = "1", features = ["sync", "rt", "macros", "rt-multi-thread"] }

[features]
default = ["validation"]
loom = ["dep:loom"]
# Adds magic bytes and checksums to item headers for corruption detection (~3 bytes per item)
validation = []
